# java_demo

./: .gitignore  README.md
hbaseDemo/: pom.xml
hbaseDemo/src/main/java/com/uf/www/: App.java
hbaseDemo/src/main/resources/: hbase-site.xml  log4j.properties
hbaseDemo/src/test/java/com/uf/www/: AppTest.java
jni_demo/: A.java  CMakeLists.txt  init.sh  main.cpp
spark_demo/: README.md  pom.xml
spark_demo/src/main/scala/: SimpleApp.scala
uploadDeme/: pom.xml
uploadDeme/src/main/java/org/example/: Upload.java
uploadDeme/src/main/resources/: application.properties
uploadDeme/src/main/resources/static/: index.html
